# Senorita_Voice_IDE

./: AGENT.md  DOCUMENTATION.md  README.md
backend/: .gitignore  pyproject.toml  requirements.txt  run.py
backend/.senorita_memory/conversations/: 03ca7c01a352.json  14c8f9220854.json  460cafff0e66.json  5836a9ca058a.json  7c179afde907.json  7c94e59ac03d.json  91f8ce2b69a7.json  94067712f034.json
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  coding_agent.py  context_agent.py  debug_agent.py  orchestrator.py  planning_agent.py  workflow_agent.py
backend/app/api/: n8n_webhooks.py  routes.py  wake_word.py  websocket.py
backend/app/config/: models.py
backend/app/models/: command.py  request.py  response.py  senorita_wakeword.onnx  senorita_wakeword.onnx.data
backend/app/router/: voice.py
backend/app/services/: __init__.py  code_actions.py  context_manager.py  deepgram_stt.py  deepgram_tts.py  embedding_service.py  file_registry.py  file_watcher.py  groq_service.py  memory_service.py  n8n_service.py  prompt_optimizer.py  smart_context.py  symbol_indexer.py  tool_service.py  wake_word_service.py
backend/app/tools/: command_parser.py
backend/docs/: voice_ai.md
backend/n8n_workflows/: email_code_assistant.json  send_summary_email.json
backend/tests/: Wakeword.py  test_indexer.py  test_voice_ai.py  test_wake_word.py  wake_word_service.py
frontend/my-next-app/: next.config.ts  package-lock.json  package.json
frontend/my-next-app/src/app/: page.tsx
frontend/my-next-app/src/components/: ConversationSidebar.tsx  ConversationSummary.tsx  DiffApprovalPanel.tsx  IDELayout.tsx  MonacoEditor.tsx  VoicePanel.tsx
frontend/my-next-app/src/hooks/: useConversations.ts  usePendingEdits.ts  useProjectFiles.ts  useTTS.ts  useVoice.ts  useVoiceSocket.ts  useWakeWord.ts  useWebSocket.ts
frontend/my-next-app/src/services/: aiService.ts  fileRegistryService.ts  fileSystemService.ts
(+8 files in other folders)
